--- a/Ejercicio-3/styles/style.css
+++ b/Ejercicio-3/styles/style.css
@@ -90,6 +90,10 @@ div.carac{
     background-color: red;
     color: #ffff;
 }
+#v1{
+    width: 380px;
+    padding: 15px;
+}
 
 ul{
     font-size: 20px;
@@ -103,3 +107,23 @@ section.form{
     text-align:center;
     background-color: coral;
 }
+#frm{
+    width: 380px;
+    padding: 15px;
+    display:inline-block;
+}
+
+#crater{
+    width: 380px;
+    padding: 15px;
+    display:inline-block;
+}
+
+
+footer{
+    font-family: 'Urbanist', sans-serif;
+    display: inline;
+    margin: 5px;
+    text-align: center;
+}
+
